--- a/technische-dokumentation/8gruppe_dokumentation_00_main.tex
+++ b/technische-dokumentation/8gruppe_dokumentation_00_main.tex
@@ -43,6 +43,7 @@
 
 \usepackage{color}							% Ermöglicht farbigen Text: \textcolor{declared-color}{text}
 											% Bsp.: \textcolor{red}{Dieser Text ist rot}.
+\usepackage{enumitem}
 
 %%% Zeilenabstand %%%
 \usepackage{setspace}
@@ -147,6 +148,14 @@ Konfigurationen werden ähnlich wie Kommandozeileaufrufe in einem weißen Kasten
 dargestellt, jedoch mit nummerierten Zeilen.
 \end{lstlisting}
 
-\include{8gruppe_dokumentation_00_kapitel}
+%\include{8gruppe_dokumentation_00_kapitel}
+\include{8gruppe_dokumentation_01}
+\include{8gruppe_dokumentation_02}
+\include{8gruppe_dokumentation_03}
+\include{8gruppe_dokumentation_04}
+\include{8gruppe_dokumentation_05}
+\include{8gruppe_dokumentation_06}
+\include{8gruppe_dokumentation_07}
+\include{8gruppe_dokumentation_08}
 
 \end{document}
