--- a/technische-dokumentation/8gruppe_dokumentation_05.tex
+++ b/technische-dokumentation/8gruppe_dokumentation_05.tex
@@ -2,7 +2,7 @@
 
 \subsection{Installation}
 
-Die virtuelle Maschine wurde auf dem Hypervisor mithilfe von {\sc virtinst} und folgendem Befehl initialisiert.
+Die virtuelle Maschine wurde auf dem Hypervisor mithilfe von {\texttt virtinst} und folgendem Befehl initialisiert.
 
 \begin{lstlisting}[numbers=none]
 > virt-install --connect qemu:///system --hvm --name webserver --ram 4096 --vcpus 1 \
@@ -14,7 +14,7 @@ Die virtuelle Maschine wurde auf dem Hypervisor mithilfe von {\sc virtinst} und 
 \end{lstlisting}
 
 Über die IP des Hypervisors und den Port $10123$ wurde eine Verbindung per VNC hergestellt, um anschließend die Installation per graphischem Installationsdialog durchzuführen. Englisch wurde gewählt, da es die Lingua franca in der IT darstellt. Zusätzlich wurde OpenSSH bei der Installation ausgewählt, um den Server ohne graphische Oberfläche aus der Ferne zu administrieren. Insgesamt wurden während der Installation folgende Einstellungen vorgenommen:
-\begin{itemize}
+\begin{itemize}[leftmargin=+1in]
 	\item[Language] Englisch
 	\item[Territory] Germany
 	\item[Keyboard] german
@@ -27,22 +27,22 @@ Die virtuelle Maschine wurde auf dem Hypervisor mithilfe von {\sc virtinst} und 
 	\item[Grub MBR] vda
 \end{itemize}
 
-Nach der Installation wurde darüberhinaus folgende Software installiert: {\sc apache2 postfix}.
+Nach der Installation wurde darüberhinaus folgende Software installiert: {\texttt apache2 postfix}.
 
 \subsection{Konfiguration}
 
 Nach der Installation von Apache wurde die Defaultwebseite durch eine ersetzt, die \ql Hello World!\qr\ ausliefert.
 
-Konfigurationsdatei: {\sc /var/www/html/index.html}
+Konfigurationsdatei: {\texttt /var/www/html/index.html}
 \begin{lstlisting}
 Hello World!
 \end{lstlisting}
 
-Während des Installationsdialoges von Postfix wurde \ql Internet with Smarthost\qr\ gewählt. Der SMTP-Server bleibt unkonfiguriert. Als Domain wird \q fastforward.hhbk.de\qr\ angegeben.
+Während des Installationsdialoges von Postfix wurde \ql Internet with Smarthost\qr\ gewählt. Der SMTP-Server bleibt unkonfiguriert. Als Domain wird \ql fastforward.hhbk.de\qr\ angegeben.
 
 \subsubsection{Netzwerk}
 
-Konfigurationsdatei: {\sc /etc/network/interfaces}
+Konfigurationsdatei: {\texttt /etc/network/interfaces}
 \begin{lstlisting}
 source /etc/network/interfaces.d/*
 
