--- a/technische-dokumentation/8gruppe_dokumentation_00_main.tex
+++ b/technische-dokumentation/8gruppe_dokumentation_00_main.tex
@@ -1,9 +1,9 @@
-\documentclass[10pt,a4paper,oneside,ngerman]{article}
+\documentclass[10pt,a4paper,oneside]{article}
 
 \usepackage[left=2.5cm,right=2.5cm,top=2.5cm,bottom=2.5cm]{geometry}
 
 \usepackage[utf8]{inputenc}					% this is needed for german umlauts
-\usepackage[ngerman]{babel}					% this is needed for german umlauts
+%\usepackage[ngerman]{babel}					% this is needed for german umlauts
 \usepackage[T1]{fontenc}						% this is needed for correct output 
                            					% of umlauts in pdf
 
