--- a/technische-dokumentation/8gruppe_dokumentation_01.tex
+++ b/technische-dokumentation/8gruppe_dokumentation_01.tex
@@ -38,6 +38,9 @@ fastforward.hhbk.de.		MX		fastforward.hhbk.de
 
 \subsection{SixXS}
 
+Folgende Daten wurden verwendet, um mit einem CISCO Router einen IPv6 via IPv4 Tunnel mit SixXS auf zu bauen.
+
+
 \begin{tabular}{|l|l|}
 \hline
 Beschreibung			& Daten						\\
